--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
 </head>
 
 <body>
@@ -30,8 +32,11 @@
             </div>
 
         </nav>
-        <div class="slider">
-            <h1> hello world </h1>
+        <div class="news">
+            <div class="news_slider">
+                <div><img src="/Img/About/mac.png" alt=""></div>
+                <div><img src="/Img/About/Hero Image.png" alt=""></div>
+            </div>
         </div>
     </header>
 
@@ -40,7 +45,9 @@
         <div></div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
+    <script src="slick/slick.min.js"></script>
     <script src="/js/burger.js"></script>
+    <script src="/js/slaider-test.js"></script>
 </body>
 
-</html> 
+</html>
