--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         </nav>
         <div class="news">
             <div class="news_slider">
-                <div><img src="/Img/About/mac.png" alt=""></div>
+                <div class="block"><img src="/Img/About/mac.png" alt=""></div>
                 <div><img src="/Img/About/Hero Image.png" alt=""></div>
+                <div><img src="/Img/About/imac.png" alt=""></div>
             </div>
         </div>
     </header>
