--- a/index.html
+++ b/index.html
@@ -34,9 +34,22 @@
         </nav>
         <div class="news">
             <div class="news_slider">
-                <div class="block"><img src="/Img/About/mac.png" alt=""></div>
-                <div><img src="/Img/About/Hero Image.png" alt=""></div>
-                <div><img src="/Img/About/imac.png" alt=""></div>
+                <div class="news_slider_block">
+                    <h3>hello world</h3>
+                    <h1>We Are A <span>Creative</span> Agency</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+                    <button>view now</button>
+                </div>
+                <div class="news_slider_block">
+                    <img src="/img/About/mac.png" alt="">
+                </div>
+                <div class="news_slider_block">
+                    <img src="/img/About/Hero Image.png" alt="">
+                </div>
+                <div class="news_slider_block">
+                    <img src="/img/About/imac.png" alt="">
+                </div>
             </div>
         </div>
     </header>
