add btn & super btn

--- a/index.html
+++ b/index.html
@@ -34,22 +34,38 @@
         </nav>
         <div class="news">
             <div class="news_slider">
+
                 <div class="news_slider_block">
-                    <h3>hello world</h3>
-                    <h1>We Are A <span>Creative</span> Agency</h1>
+                    <h3>Hi bro!</h3>
+                    <h1>I am a <span>Creative</span> person</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                         specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
-                    <button>view now</button>
+                    <button class="btn">view now</button>
                 </div>
                 <div class="news_slider_block">
-                    <img src="/img/About/mac.png" alt="">
+                    <div id="wrap">
+                        <a href="#" class="my-super-cool-btn">
+                            <div class="dots-container">
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                            </div>
+                            <span>Go!</span>
+                        </a>
+                    </div>
                 </div>
+
+                <!-- <div class="news_slider_block">
+                    <img src="/img/About/mac.png" alt="">
+                </div> -->
                 <div class="news_slider_block">
                     <img src="/img/About/Hero Image.png" alt="">
                 </div>
                 <div class="news_slider_block">
                     <img src="/img/About/imac.png" alt="">
                 </div>
+
             </div>
         </div>
     </header>
@@ -61,7 +77,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
     <script src="slick/slick.min.js"></script>
     <script src="/js/burger.js"></script>
-    <script src="/js/slaider-test.js"></script>
+    <script src="/js/slaider.js"></script>
 </body>
 
 </html>
