--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
                 <span> </span>
             </div>
 
+            <div id="ball">
+                <p></p>
+            </div>
         </nav>
         <div class="news">
             <div class="news_slider">
-
                 <div class="news_slider_block">
                     <h3>Hi bro!</h3>
                     <h1>I am a <span>Creative</span> person</h1>
@@ -43,7 +45,7 @@
                     <button class="btn">view now</button>
                 </div>
                 <div class="news_slider_block">
-                    <div id="wrap">
+                    <div class="wrap">
                         <a href="#" class="my-super-cool-btn">
                             <div class="dots-container">
                                 <div class="dot"></div>
@@ -57,11 +59,8 @@
                 </div>
 
                 <!-- <div class="news_slider_block">
-                    <img src="/img/About/mac.png" alt="">
-                </div> -->
-                <div class="news_slider_block">
                     <img src="/img/About/Hero Image.png" alt="">
-                </div>
+                </div> -->
                 <div class="news_slider_block">
                     <img src="/img/About/imac.png" alt="">
                 </div>
@@ -76,8 +75,9 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js "></script>
     <script src="slick/slick.min.js"></script>
-    <script src="/js/burger.js"></script>
-    <script src="/js/slaider.js"></script>
+    <script src="js/burger.js"></script>
+    <script src="js/slaider.js"></script>
+    <script src="js/drag.js"></script>
 </body>
 
 </html>
