--- a/index.html
+++ b/index.html
@@ -32,20 +32,23 @@
             </div>
 
             <div id="ball">
-                <p></p>
+                <span>drag me</span>
             </div>
         </nav>
         <div class="news">
             <div class="news_slider">
                 <div class="news_slider_block">
-                    <h3>Hi bro!</h3>
-                    <h1>I am a <span>Creative</span> person</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
-                    <button class="btn">view now</button>
+                    <div class="news_slider_block_text">
+
+                        <h3>Hi bro!</h3>
+                        <h1>I am a <span>Creative</span> person</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                            specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+                        <button class="btn">view now</button>
+                    </div>
                 </div>
                 <div class="news_slider_block">
-                    <div class="wrap">
+                    <div class="news_slider_block_btn">
                         <a href="#" class="my-super-cool-btn">
                             <div class="dots-container">
                                 <div class="dot"></div>
@@ -62,7 +65,10 @@
                     <img src="/img/About/Hero Image.png" alt="">
                 </div> -->
                 <div class="news_slider_block">
-                    <img src="/img/About/imac.png" alt="">
+                    <div class="news_slider_block_sl-img">
+                        <img src="/img/About/imac.png" alt="">
+                    </div>
+
                 </div>
 
             </div>
