--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div> -->
                 <div class="news_slider_block">
                     <div class="news_slider_block_sl-img">
-                        <img src="/img/About/imac.png" alt="">
+                        <img src="../img/About/imac.png" alt="">
                     </div>
 
                 </div>
