--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="header_logo">
-                <a href="#"><img src="Img/header/logo.png" alt="logo"></a>
+                <a href="#"><img src="img/header/logo.png" alt="logo"></a>
             </div>
             <div class="menu">
                 <ul>
@@ -65,7 +65,7 @@
                 </div> -->
                 <div class="news_slider_block">
                     <div class="news_slider_block_sl-img">
-                        <img src="img/About/imac.png" alt="mac">
+                        <img src="/img/about/imac.png" alt="mac">
                     </div>
 
                 </div>
