--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div> -->
                 <div class="news_slider_block">
                     <div class="news_slider_block_sl-img">
-                        <img src="/img/about/imac.png" alt="mac">
+                        <img src="img/about/imac.png" alt="mac">
                     </div>
 
                 </div>
