--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="header_logo">
-                <a href="#"><img src="img/header/logo.png" alt="logo"></a>
+                <a href="#"><img src="Img/header/logo.png" alt="logo"></a>
             </div>
             <div class="menu">
                 <ul>
