--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <nav>
             <div class="header_logo">
+
                 <a href="#"><img src="Img/header/logo.png" alt="logo"></a>
             </div>
             <div class="menu">
@@ -65,7 +66,8 @@
                 </div> -->
                 <div class="news_slider_block">
                     <div class="news_slider_block_sl-img">
-                        <img src="img/about/imac.png" alt="mac">
+
+                        <img src="Img/About/imac.png" alt="mac">
                     </div>
 
                 </div>
