--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <div class="header_logo">
 
-                <a href="#"><img src="Img/header/logo.png" alt="logo"></a>
+                <a href="#"><img src="img/header/logo.png" alt="logo"></a>
             </div>
             <div class="menu">
                 <ul>
@@ -67,7 +67,7 @@
                 <div class="news_slider_block">
                     <div class="news_slider_block_sl-img">
 
-                        <img src="Img/About/imac.png" alt="mac">
+                        <img src="img/about/imac.png" alt="mac">
                     </div>
 
                 </div>
