--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                         <h3>Hi bro!</h3>
                         <h1>I am a <span>Creative</span> person</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                            specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+                            specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+                        </p>
                         <button class="btn">view now</button>
                     </div>
                 </div>
@@ -75,6 +76,23 @@
             </div>
         </div>
     </header>
+
+    <div class="wrap">
+        <div class="workflow">
+            <div class="workflow_element">
+                <div class="workflow_element_greeting">
+                    <h2>Our Workflow </h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+                </div>
+                <div class="workflow_element_greeting_flows">
+                    <div class="workflow_element_greeting_flow">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div></div>
     <footer>
