--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="news_slider">
                 <div class="news_slider_block">
                     <div class="news_slider_block_text">
-                        <h3>Hi bro!</h3>
+                        <p>Hi bro!</p>
                         <h1>I am a <span>Creative</span> person</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                             specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
@@ -63,7 +63,6 @@
                 </div>
                 <div class="news_slider_block">
                     <div class="news_slider_block_sl-img">
-
                         <img src="img/about/imac.png" alt="mac">
                     </div>
 
@@ -77,13 +76,22 @@
         <div class="workflow">
             <div class="workflow_element">
                 <div class="workflow_element_greeting">
-                    <h2>Our Workflow </h2>
+                    <h3>Our Workflow </h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
+                    </p>
                 </div>
-                <div class="workflow_element_greeting_flows">
-                    <div class="workflow_element_greeting_flow">
-                        <img src="" alt="">
+                <div class="workflow_element_processes">
+                    <div class="workflow_element_greeting_process">
+                        <div class="workflow_element_greeting_process_img">
+                            <img src="img/workflow/mail.svg" alt="mail">
+                        </div>
+                        <div class="workflow_element_greeting_process_text">
+                            <h4>Email Marketing</h4>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+                                a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+                                Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        </div>
                     </div>
                 </div>
             </div>
