V0,03 add blok workflow

--- a/index.html
+++ b/index.html
@@ -31,10 +31,6 @@
             <div class="burger">
                 <span> </span>
             </div>
-
-            <div id="ball">
-                <span>drag me</span>
-            </div>
         </nav>
         <div class="news">
             <div class="news_slider">
@@ -82,15 +78,58 @@
                     </p>
                 </div>
                 <div class="workflow_element_processes">
-                    <div class="workflow_element_greeting_process">
-                        <div class="workflow_element_greeting_process_img">
+                    <div class="workflow_element_processes_process">
+                        <div class="workflow_element_processes_process_img">
                             <img src="img/workflow/mail.svg" alt="mail">
                         </div>
-                        <div class="workflow_element_greeting_process_text">
+                        <div class="workflow_element_processes_process_text">
                             <h4>Email Marketing</h4>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-                                a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-                                Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                        </div>
+                    </div>
+                    <div class="workflow_element_processes_process">
+                        <div class="workflow_element_processes_process_img">
+                            <img src="img/workflow/desigh1.svg" alt="design">
+                        </div>
+                        <div class="workflow_element_processes_process_text">
+                            <h4>Graphic Design</h4>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an</p>
+                        </div>
+                    </div>
+                    <div class="workflow_element_processes_process">
+                        <div class="workflow_element_processes_process_img">
+                            <img src="img/workflow/desigh2.svg" alt="desigh">
+                        </div>
+                        <div class="workflow_element_processes_process_text">
+                            <h4>Web Design</h4>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an</p>
+                        </div>
+                    </div>
+                    <div class="workflow_element_processes_process">
+                        <div class="workflow_element_processes_process_img">
+                            <img src="img/workflow/print.svg" alt="print">
+                        </div>
+                        <div class="workflow_element_processes_process_text">
+                            <h4>Print</h4>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an</p>
+                        </div>
+                    </div>
+                    <div class="workflow_element_processes_process">
+                        <div class="workflow_element_processes_process_img">
+                            <img src="img/workflow/cloud.svg" alt="cloud">
+                        </div>
+                        <div class="workflow_element_processes_process_text">
+                            <h4>Hosting</h4>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an</p>
+                        </div>
+                    </div>
+                    <div class="workflow_element_processes_process">
+                        <div class="workflow_element_processes_process_img">
+                            <img src="img/workflow/marketing.svg" alt="marketing">
+                        </div>
+                        <div class="workflow_element_processes_process_text">
+                            <h4>Email Marketing</h4>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an</p>
                         </div>
                     </div>
                 </div>
@@ -106,7 +145,6 @@
     <script src="slick/slick.min.js"></script>
     <script src="js/burger.js"></script>
     <script src="js/slaider.js"></script>
-    <script src="js/drag.js"></script>
 </body>
 
 </html>
