--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="news_slider">
                 <div class="news_slider_block">
                     <div class="news_slider_block_text">
-                        <p>Hi bro!</p>
+                        <h6>Hi bro!</h6>
                         <h1>I am a <span>Creative</span> person</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                             specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.
