--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </nav>
         <div class="news">
             <div class="news_slider">
-                <div class="news_slider_block">
-                    <div class="news_slider_block_text">
+                <div class="news_slider_blocks">
+                    <div class="news_slider_blocks_text">
                         <h6>Hi bro!</h6>
                         <h1>I am a <span>Creative</span> person</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
@@ -45,26 +45,12 @@
                         <button class="btn ">view now</button>
                     </div>
                 </div>
-                <div class="news_slider_block">
-                    <div class="news_slider_block_btn">
-                        <a href="#" class="my-super-cool-btn">
-                            <div class="dots-container">
-                                <div class="dot"></div>
-                                <div class="dot"></div>
-                                <div class="dot"></div>
-                                <div class="dot"></div>
-                            </div>
-                            <span>Go!</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="news_slider_block">
-                    <div class="news_slider_block_sl-img">
+                <div class="news_slider_blocks">
+                    <div class="news_slider_blocks_sl-img">
                         <img src="img/about/imac.png" alt="mac">
                     </div>
-
                 </div>
-
+                <div class="news_slider_blocks"></div>
             </div>
         </div>
     </header>
