--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </header>
 
-    <div class="wrap">
+    <div class="content">
         <div class="workflow">
             <div class="workflow_element">
                 <div class="workflow_element_greeting">
@@ -117,6 +117,38 @@
                         <div class="workflow_element_processes_process_text">
                             <h4>Email Marketing</h4>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="about">
+            <div class="about_element">
+                <div class="about_element_greeting">
+                    <h3>About us </h3>
+                    <h2>One does not simply, stop and distract the programmer!</h2>
+                    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit avocado, consectetur, adipisci velit..."<br> "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
+                    </p>
+                </div>
+                <div class="about_element_doit">
+                    <div class="about_element_doit_img">
+                        <img src="img/about/mac.png" alt="imac">
+                    </div>
+                    <div class="about_element_doit_proces-history">
+                        <div class="about_element_doit_proces-history_prs">
+                            <h5>What we do?</h5>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                            </p>
+                        </div>
+                        <div class="about_element_doit_proces-history_hst">
+                            <h5>Our history </h5>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                            </p>
+                        </div>
+                        <div class="about_element_doit_proces-history_btn">
+                            <button>view now</button>
                         </div>
                     </div>
                 </div>
