--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
@@ -115,7 +115,7 @@
                             <img src="img/workflow/marketing.svg" alt="marketing">
                         </div>
                         <div class="workflow_element_processes_process_text">
-                            <h4>Email Marketing</h4>
+                            <h4>Marketing</h4>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an</p>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="about_element_doit">
                     <div class="about_element_doit_img">
-                        <img src="img/about/mac.png" alt="imac">
+                        <img src="img/about/One does not simply.jpg" alt="imac">
                     </div>
                     <div class="about_element_doit_proces-history">
                         <div class="about_element_doit_proces-history_prs">
