--- a/index.html
+++ b/index.html
@@ -137,15 +137,11 @@
                     <div class="about_element_doit_proces-history">
                         <div class="about_element_doit_proces-history_prs">
                             <h5>What we do?</h5>
-                            <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                            </p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
                         </div>
                         <div class="about_element_doit_proces-history_hst">
                             <h5>Our history </h5>
-                            <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                            </p>
+                            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
                         </div>
                         <div class="about_element_doit_proces-history_btn">
                             <button>view now</button>
@@ -154,8 +150,120 @@
                 </div>
             </div>
         </div>
+        <div class="portfolio">
+            <div class="portfolio_element">
+                <div class="portfolio_element_greeting">
+                    <h3>Portfolio </h3>
+                    <h5>The work we have done so far for our awesome clients</h5>
+                    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit avocado, consectetur, adipisci velit..."<br> "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
+                </div>
+                <div class="portfolio_element_galery">
+                    <div class="portfolio_element_galery_menu">
+                        <ul>
+                            <li><a href="#">All</a></li>
+                            <li><a href="#">Photograph</a></li>
+                            <li><a href="#">Video</a></li>
+                            <li><a href="#">Graphics</a></li>
+                            <li><a href="#">Branding</a></li>
+                            <li><a href="#">Web Sites</a></li>
+                        </ul>
+                    </div>
+                    <div class="portfolio_element_galery_projects">
+                        <div class="portfolio_element_galery_projects_project">
+                            <div class="portfolio_element_galery_projects_project_img">
+                                <img src="img/portfolio/Layer_5.jpg" alt="">
+                            </div>
+                            <div class="portfolio_element_galery_projects_project_text">
+                                <h5>Duis nec congue</h5>
+                                <p>Neque porro quisquam est qui dolorem</p>
+                            </div>
+                        </div>
+                        <div class="portfolio_element_galery_projects_project">
+                            <div class="portfolio_element_galery_projects_project_img">
+                                <img src="img/portfolio/Layer_6.jpg" alt="">
+                            </div>
+                            <div class="portfolio_element_galery_projects_project_text">
+                                <h5>Duis nec congue</h5>
+                                <p>Neque porro quisquam est qui dolorem</p>
+                            </div>
+                        </div>
+                        <div class="portfolio_element_galery_projects_project">
+                            <div class="portfolio_element_galery_projects_project_img">
+                                <img src="img/portfolio/Layer_7.jpg" alt="">
+                            </div>
+                            <div class="portfolio_element_galery_projects_project_text">
+                                <h5>Duis nec congue</h5>
+                                <p>Neque porro quisquam est qui dolorem</p>
+                            </div>
+                        </div>
+                        <div class="portfolio_element_galery_projects_project">
+                            <div class="portfolio_element_galery_projects_project_img">
+                                <img src="img/portfolio/Layer_8.jpg" alt="">
+                            </div>
+                            <div class="portfolio_element_galery_projects_project_text">
+                                <h5>Duis nec congue</h5>
+                                <p>Neque porro quisquam est qui dolorem</p>
+                            </div>
+                        </div>
+                        <div class="portfolio_element_galery_projects_project">
+                            <div class="portfolio_element_galery_projects_project_img">
+                                <img src="img/portfolio/Layer_9.jpg" alt="">
+                            </div>
+                            <div class="portfolio_element_galery_projects_project_text">
+                                <h5>Duis nec congue</h5>
+                                <p>Neque porro quisquam est qui dolorem</p>
+                            </div>
+                        </div>
+                        <div class="portfolio_element_galery_projects_project">
+                            <div class="portfolio_element_galery_projects_project_img">
+                                <img src="img/portfolio/Layer_10.jpg" alt="">
+                            </div>
+                            <div class="portfolio_element_galery_projects_project_text">
+                                <h5>Duis nec congue</h5>
+                                <p>Neque porro quisquam est qui dolorem</p>
+                            </div>
+                        </div>
+                        <div class="portfolio_element_galery_projects_project">
+                            <div class="portfolio_element_galery_projects_project_img">
+                                <img src="img/portfolio/Layer_11.jpg" alt="">
+                            </div>
+                            <div class="portfolio_element_galery_projects_project_text">
+                                <h5>Duis nec congue</h5>
+                                <p>Neque porro quisquam est qui dolorem</p>
+                            </div>
+                        </div>
+                        <div class="portfolio_element_galery_projects_project">
+                            <div class="portfolio_element_galery_projects_project_img">
+                                <img src="img/portfolio/Layer_12.jpg" alt="">
+                            </div>
+                            <div class="portfolio_element_galery_projects_project_text">
+                                <h5>Duis nec congue</h5>
+                                <p>Neque porro quisquam est qui dolorem</p>
+                            </div>
+                        </div>
+                        <div class="portfolio_element_galery_projects_project">
+                            <div class="portfolio_element_galery_projects_project_img">
+                                <img src="img/portfolio/Layer_13.jpg" alt="">
+                            </div>
+                            <div class="portfolio_element_galery_projects_project_text">
+                                <h5>Duis nec congue</h5>
+                                <p>Neque porro quisquam est qui dolorem</p>
+                            </div>
+                        </div>
+                        <div class="portfolio_element_galery_projects_project">
+                            <div class="portfolio_element_galery_projects_project_img">
+                                <img src="img/portfolio/Layer_14.jpg" alt="">
+                            </div>
+                            <div class="portfolio_element_galery_projects_project_text">
+                                <h5>Duis nec congue</h5>
+                                <p>Neque porro quisquam est qui dolorem</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
     <div></div>
     <footer>
         <div></div>
