--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="news_slider_blocks">
                     <div class="news_slider_blocks_sl-img">
-                        <img src="img/about/imac.png" alt="mac">
+                        <img src="img/about/hero Image.png" alt="mac">
                     </div>
                 </div>
                 <div class="news_slider_blocks"></div>
