--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
                         <img src="img/about/hero Image.png" alt="mac">
                     </div>
                 </div>
-                <div class="news_slider_blocks"></div>
+                <div class="news_slider_blocks">
+
+                    <div class="news_slider_blocks_sl-img">
+                        <img src="img/about/mac.png" alt="mac">
+                    </div>
+                </div>
             </div>
         </div>
     </header>
@@ -127,7 +132,8 @@
                 <div class="about_element_greeting">
                     <h3>About us </h3>
                     <h2>One does not simply, stop and distract the programmer!</h2>
-                    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit avocado, consectetur, adipisci velit..."<br> "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
+                    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit avocado, consectetur, adipisci velit..."
+                        <br> "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
                     </p>
                 </div>
                 <div class="about_element_doit">
@@ -155,7 +161,8 @@
                 <div class="portfolio_element_greeting">
                     <h3>Portfolio </h3>
                     <h5>The work we have done so far for our awesome clients</h5>
-                    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit avocado, consectetur, adipisci velit..."<br> "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
+                    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit avocado, consectetur, adipisci velit..."
+                        <br> "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
                 </div>
                 <div class="portfolio_element_galery">
                     <div class="portfolio_element_galery_menu">
@@ -263,8 +270,62 @@
                 </div>
             </div>
         </div>
+        <div class="team">
+            <div class="team_element">
+                <div class="team_element_greeting">
+                    <h3>Our Team members</h3>
+                    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit avocado, consectetur, adipisci velit..."
+                        <br> "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
+                </div>
+                <div class="team_element_carts">
+                    <div class="team_element_carts_cart">
+                        <div class="team_element_carts_cart_img">
+                            <img src="img/our_team/kyle.jpg" alt="me">
+                        </div>
+                        <div class="team_element_carts_cart_text">
+                            <h5>Kyle Krylov</h5>
+                            <div class="team_element_carts_cart_text_position">Boss</div>
+                            <p>"Java относится к javascript так же как сом к сомали."</p>
+                            <div class="team_element_carts_cart_text_socet"></div>
+                        </div>
+                    </div>
+                    <div class="team_element_carts_cart">
+                        <div class="team_element_carts_cart_img">
+                            <img src="img/our_team/Keanu.jpg" alt="Keanu">
+                        </div>
+                        <div class="team_element_carts_cart_text">
+                            <h5>Keanu Charles Reeves</h5>
+                            <div class="team_element_carts_cart_text_position">Ἰησοῦς</div>
+                            <p>"You are breathtaking!"</p>
+                            <div class="team_element_carts_cart_text_socet"></div>
+                        </div>
+                    </div>
+                    <div class="team_element_carts_cart">
+                        <div class="team_element_carts_cart_img">
+                            <img src="img/our_team/brat.jpg" alt="Gretta">
+                        </div>
+                        <div class="team_element_carts_cart_text">
+                            <h5>Evgenyi Abramson</h5>
+                            <div class="team_element_carts_cart_text_position">Teacher</div>
+                            <p>"I'm busy"</p>
+                            <div class="team_element_carts_cart_text_socet"></div>
+                        </div>
+                    </div>
+                    <div class="team_element_carts_cart">
+                        <div class="team_element_carts_cart_img">
+                            <img src="img/our_team/ecologist.jpg" alt="Gretta">
+                        </div>
+                        <div class="team_element_carts_cart_text">
+                            <h5>Greta Thunberg</h5>
+                            <div class="team_element_carts_cart_text_position">Ecologist</div>
+                            <p>"Right hire right now!"</p>
+                            <div class="team_element_carts_cart_text_socet"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div></div>
     <footer>
         <div></div>
     </footer>
